--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 #root,
 html,
 body {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   line-height: 1.5;
   font-weight: 400;
   background-color: #272b30;
